[package]
name = "userscript-dev"
version = "0.1.0"
edition = "2024"
description = "Portable Tampermonkey userscript inspection and local-loader CLI"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tungstenite = "0.28"
